--- a/src/js/components/GamePicker/GamePicker.css
+++ b/src/js/components/GamePicker/GamePicker.css
@@ -7,6 +7,8 @@
   width: 200px;
   border-radius: 2px;
   overflow: hidden;
+  position: relative;
+  z-index: 99;
 }
 
 .game-picker-container:hover {
